--- a/src/styles/task.scss
+++ b/src/styles/task.scss
@@ -5,3 +5,16 @@
     font-weight: bold;
     color: cadetblue;
 }
+.task-action{
+    cursor: pointer;
+}
+
+.task-completed {
+    color: gray;
+    text-decoration: line-through;
+}
+
+.task-pending {
+    font-weight: bold;
+    color: red;
+}
